--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -5,8 +5,10 @@
         <title>Meus Carros</title>
     </head>
     {% block content %}
-    <body>
-        <h3>Carro 1: {{ cars.model }} </h3>
-    </body>
+        <body>
+            {% for car in cars %}
+                <h3>{{car.brand }} {{ car.model }}  {{ car.factory_year }} </h3>
+            {% endfor %}
+        </body>
     {% endblock %}
 </html>
